<resources>
    <string name="app_name">Yuk Lapor!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="di_aplikasi_yuk_lapor">Di Aplikasi Yuk Lapor</string>
    <string name="belum_punya_akun_klik_disini">Belum Punya Akun? Klik Disini!</string>
    <string name="nik">NIK</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="notelepon">Nomor Telepon</string>
    <string name="daftarkan_akunmu">Daftarkan Akunmu</string>
    <string name="email">Email</string>
    <string name="daftar_laporan">Daftar Laporan</string>
    <string name="berita">Berita</string>
    <string name="laporan_terakhir_kamu">Laporan Terakhir Kamu.</string>
    <string name="mohon_tunggu_sebentar">Mohon Tunggu Sebentar</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="home">Home</string>
    <string name="laporkan">Laporkan</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halo">Halo,</string>
    <string name="masukkan_gambar">Masukkan Gambar</string>
    <string name="image_laporan">Image Laporan</string>
    <string name="tanda_plus">Icon Plus</string>
    <string name="isi_laporan">Isi Laporan</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="from_freepik">From Freepik</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="belum_diproses">Belum Diproses</string>
    <string name="diproses">Diproses</string>
    <string name="selesai">Selesai</string>
    <string name="status">Status :</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a urna et tortor venenatis eleifend vel vitae arcu. Integer ultricies dolor leo, at vestibulum odio finibus vel. In ac luctus lacus, vel imperdiet nisi. Quisque non lorem id libero finibus commodo. Vivamus ante elit, malesuada sit amet pretium in, vestibulum vitae velit. Nullam dapibus, lectus ac congue sodales, nisl erat scelerisque felis, gravida feugiat tellus orci et ligula. Morbi interdum semper lectus, id malesuada quam sollicitudin id. Cras porta ipsum ut commodo molestie. Mauris ipsum risus, lobortis in urna vitae, viverra suscipit libero. Duis sed malesuada magna. "Dahulu kala, tinggallah seorang gadis cantik bersama 2 orang kakak dan Ibu tirinya. Sejak ayah kandungnya meninggal, ia diperlakukan seperti seorang pembantu. Dipaksa untuk menuruti segala permintaan ibu dan kedua kakak tirinya. Meskipun begitu, Cinderella tetaplah seorang gadis yang baik hati, ia tetap menyayangi kedua kakak dan ibu tirinya.\n\nSuatu hari istana akan mengadakan pesta dansa. Undangan pun disebar hingga ke pelosok desa. Pesta dansa ini bertujuan untuk mencari gadis yang akan menjadi permaisuri pangeran. Mendengar kabar gembira itu, kedua kakak tiri Cinderella sangat bahagia. “ibu, tolong pilihkan aku gaun yang paling cantik untuk menghadiri pesta dansa di istana malam nanti” ujar kakak sulung. “aku juga bu, belikan aku gaun yang baru. Aku tak ingin pangeran kecewa saat berdansa denganku” timpal kakak kedua. Mendengar puterinya berceloteh ria, ibu menjawab “tentu saja, ibu akan memilihkan baju yang bagus untuk pesta nanti malam”."</string>
    <string name="lihat_tanggapan">Lihat Tanggapan</string>
    <string name="pegawai">Pegawai</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggapan">Tanggapan</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="edit_laporan">Edit Laporan</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="apakah_anda_yakin">Apakah Anda Yakin?</string>
    <string name="beritakan">Beritakan</string>
    <string name="daftar">Daftar</string>
    <string name="ubah_status">Ubah Status</string>
    <string name="tambah_berita">Tambah Berita</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="isi_berita">Isi Berita</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="logout">Logout</string>
    <string name="tambah_admin">Registrasi Admin</string>
    <string name="masyarakat">Masyarakat</string>
    <string name="admin">Administrator</string>
    <string name="petugas">Petugas</string>
    <string name="dibuat_oleh">Dibuat Oleh</string>
    <string name="laporan_terakhir_masyarakat">Laporan Terakhir Masyarakat</string>
    <string name="role">Role</string>
    <string name="yuk_lapor">Yuk Lapor!</string>
    <string name="cepat_mudah"><![CDATA[Cepat & Mudah]]></string>
    <string name="lihat_report">Lihat Report</string>
    <string name="eksport_ke_pdf">Eksport ke PDF</string>
    <string name="report">Report</string>
</resources>
