<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.gproduction.yuklapor.ui.laporkan.LaporkanViewModel" />
        <variable
            name="model"
            type="com.gproduction.yuklapor.data.model.LaporkanModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.laporkan.LaporkanFragment">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_gambar"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/monserratsemibold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                />
            <FrameLayout
                android:id="@+id/frameAddGambar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:onClick="@{()->viewmodel.addPhotoOnClick()}">

                <ImageView
                    android:id="@+id/addImage"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_laporan"
                    android:src="@drawable/bg_rounded_edittext"
                     />

                <ImageView
                    android:id="@+id/icAdd"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/ic_add_black_24dp"
                    android:tint="@color/colorBackgroundDark"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tanda_plus" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etJudulLaporan"
                style="@style/editTextAuth"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@={viewmodel.judul}"
                android:hint="@string/judul_laporan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Judul Laporan"
                android:inputType="textCapWords"
                android:importantForAutofill="no" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContent"
                style="@style/editTextContent"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@={viewmodel.content}"
                android:hint="@string/isi_laporan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:inputType="text|textMultiLine|textCapSentences"
                tools:text="Judul Laporan"
                android:gravity="top"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonReport"
                android:onClick="@{(v)->viewmodel.laporkanOnClick(v,model)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laporkan"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/_29sdp"
                />

        </LinearLayout>

    </LinearLayout>
</layout>