<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.gproduction.yuklapor.ui.laporkan.LaporkanViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/linearTambahPhoto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_foto"
            android:layout_gravity="center"
            android:fontFamily="@font/monserratsemibold"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <ImageView
                android:id="@+id/imgCamera"
                android:onClick="@{()->viewmodel.cameraOnClick()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_weight="1"
                android:contentDescription="@string/from_freepik"/>

            <ImageView
                android:id="@+id/imgGallery"
                android:onClick="@{()->viewmodel.galleryOnClick()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery"
                android:layout_weight="1"
                android:contentDescription="@string/from_freepik"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/kamera"
               android:gravity="center"
               android:fontFamily="@font/monserratsemibold"
               android:textSize="@dimen/_12sdp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/galeri"
                android:gravity="center"
                android:fontFamily="@font/monserratsemibold"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


    </LinearLayout>
</layout>
