<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:gravity="center|bottom">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ic_questionmark"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apakah_anda_yakin"
        android:fontFamily="@font/montserratbold"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnYa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/ya"
            android:fontFamily="@font/montserratbold"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/btnTidak"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundDark"
            android:gravity="center"
            android:text="@string/tidak"
            android:fontFamily="@font/montserratbold"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>