<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.gproduction.yuklapor.ui.profile.ProfileViewModel" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottomSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar"
            />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:inputType="number"
                    android:text="@string/nik" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNik"
                    style="@style/editTextAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={viewmodel.nik}"
                    tools:text="gilang" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/namalengkap" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamaLengkap"
                    style="@style/editTextAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:text="@={viewmodel.nama}"
                    tools:text="gilang" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailBottom"
                    style="@style/editTextAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.email}"
                    tools:text="gilang" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    app:hintEnabled="true"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordBottom"
                        style="@style/editTextAuth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword|textNoSuggestions"
                        android:text="@={viewmodel.password}"
                        tools:text="gilang" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/confirmpassword" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etConfirmPasswordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    app:hintEnabled="true"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirmPasswordBottom"
                        style="@style/editTextAuth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword|textNoSuggestions"
                        android:text="@={viewmodel.confirmPassword}"
                        tools:text="gilang" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/notelepon" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNoTelepon"
                    style="@style/editTextAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@={viewmodel.noHp}"
                    tools:text="gilang" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/role" />

                <FrameLayout
                    android:id="@+id/frameStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <Spinner
                        android:id="@+id/spinnerRole"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/bg_rounded_edittext"
                        android:entries="@array/role_registrasi"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/monserratsemibold"
                    android:onClick="@{()->viewmodel.buttonRegistrasiClicked()}"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>